# Nadir

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  builder.yml  ci.yml  release.yml  test.yml
doc/: README.md  grammar.pest
docs/: grammar.pest
example/: README.md  boot.asm  chip8.asm  dos.asm  hello.asm  wasm.asm
examples/: hello.asm  test.asm
include/nadir/: analyzer.h  ast.h  cli.h  common.h  compiler.h  comptime.h  error.h  lexer.h  module.h  parser.h  token.h
include/nadir/common/: arena.h  list.h  number.h  stack.h  table.h
src/: analyzer.c  ast.c  cli.c  common.c  compiler.c  comptime.c  error.c  lexer.c  main.c  module.c  parser.c  token.c
src/common/: arena.c  list.c  number.c  stack.c  table.c
test/: CMakeLists.txt  common.cppm  test.py  tester.cpp  tester.py
test/expect/: address_math  big_constant  big_procedure  bit_packing  calculate_endianness  comments  empty_parameter  fill  forward_address  hashing  here_comptime  if_comptime  include_files  long_identifier  minification  multiple_constant  number_base2
test/failure/: address_invalid.asm  address_redefinition.asm  address_undefined.asm  binary_empty.asm  binary_missing_origin.asm  binary_origin_overflow.asm  binary_origin_underflow.asm  binary_redefinition.asm  binary_undefined.asm  binary_unexpected_expression.asm  byte_mismatch.asm  case_sensitive.asm  comptime_assert_fail.asm  comptime_bswap_fail.asm  comptime_context.asm  comptime_division_by_zero.asm  comptime_invalid.asm  comptime_shift_out_of_bound.asm  comptime_undefined.asm  constant_invalid.asm  constant_redefinition.asm  constant_undefined.asm  forgotten_semicolon.asm  identifier_too_long.asm  include_cyclic.asm  include_invalid.asm  include_recursive.asm  include_redefinition.asm  invalid_number.asm  number_base10_too_long.asm  number_base16_too_long.asm  number_base2_too_long.asm  number_invalid.asm  procedure_comma_missing.asm  procedure_invalid.asm  procedure_mismatch.asm  procedure_missing_operand.asm  procedure_out_of_bound.asm  procedure_redefinition.asm  procedure_type_mismatch.asm  (+10 more)
test/module/: cyclic.asm  file1.asm  file2.asm  file3.asm
test/success/: 5_bytes.asm  address_math.asm  assert.asm  big_constant.asm  big_procedure.asm  bit_packing.asm  calculate_endianness.asm  comments.asm  empty_parameter.asm  fill.asm  forward_address.asm  hashing.asm  here_comptime.asm  if_comptime.asm  if_truthness.asm  include_files.asm  long_identifier.asm  max_argument.asm  minification.asm  multiple_constant.asm  nested_call.asm  number_base2.asm  number_padding.asm  one_byte_base10.asm  one_byte_base16.asm  one_byte_comptime.asm  poly_opcode.asm  population_count.asm  single_byte.asm
